--- a/comics/200/index.html
+++ b/comics/200/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #199: Tanning</title>
+    <title>comiCSS #200: CSS Pyramid of Greatness</title>
 
-    <meta property="og:title" content="comiCSS #199: Tanning" />
+    <meta property="og:title" content="comiCSS #200: CSS Pyramid of Greatness" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/199" />
-    <meta property="og:image" content="https://comicss.art/comics/199/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels showing three people talking. Person 1: We have a coupon for the tanning salon. Want to come with us? Person 2: I want a tan too, but I can't go coz of my sinus infection. Maybe tomorrow? Person 1: It expires today. That salon is pricey, I couldn’t afford such a cost without a coupon. It’d be a sin not to use it. Would a tangerine help? Person 2: W... What...? Hmmm... Hypothesis: the cartoonist is randomly inserting trigonometric functions into the comic. Person 3: EIGHT!" />
+    <meta property="og:url" content="https://comicss.art/comics/200" />
+    <meta property="og:image" content="https://comicss.art/comics/200/thumb.png" />
+    <meta property="og:description" content="Cartoon showing a triangle titled 'CSS Pyramid of Greatness'. The triangle contains 55 rectangles with information and key features of CSS. From 'Animations: moving things around and keeping you warm in winter' to 'Tailwind: Avoid it'. Check the live demo for more information and all 55 of them." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/199">
-    <meta name="twitter:title" content="comiCSS #199: Tanning">
-    <meta name="twitter:description" content="comic with 4 panels showing three people talking. Person 1: We have a coupon for the tanning salon. Want to come with us? Person 2: I want a tan too, but I can't go coz of my sinus infection. Maybe tomorrow? Person 1: It expires today. That salon is pricey, I couldn’t afford such a cost without a coupon. It’d be a sin not to use it. Would a tangerine help? Person 2: W... What...? Hmmm... Hypothesis: the cartoonist is randomly inserting trigonometric functions into the comic. Person 3: EIGHT!">
-    <meta name="twitter:image" content="https://comicss.art/comics/199/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/200">
+    <meta name="twitter:title" content="comiCSS #200: CSS Pyramid of Greatness">
+    <meta name="twitter:description" content="Cartoon showing a triangle titled 'CSS Pyramid of Greatness'. The triangle contains 55 rectangles with information and key features of CSS. From 'Animations: moving things around and keeping you warm in winter' to 'Tailwind: Avoid it'. Check the live demo for more information and all 55 of them.">
+    <meta name="twitter:image" content="https://comicss.art/comics/200/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/199" />
+    <link rel="canonical" href="https://comicss.art/comics/200" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Tanning</h1>
+      <h1>CSS Pyramid of Greatness</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/198" rel="prev">
+        <a href="/comics/199" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/128">
+        <a class="random-post" href="/comics/190">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/200" rel="next">
+        <a href="/comics/201" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels showing three people talking. Person 1: We have a coupon for the tanning salon. Want to come with us? Person 2: I want a tan too, but I can't go coz of my sinus infection. Maybe tomorrow? Person 1: It expires today. That salon is pricey, I couldn’t afford such a cost without a coupon. It’d be a sin not to use it. Would a tangerine help? Person 2: W... What...? Hmmm... Hypothesis: the cartoonist is randomly inserting trigonometric functions into the comic. Person 3: EIGHT!">
-        <img src="/comics/199/199-tanning-0.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-1.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-2.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="Cartoon showing a triangle titled 'CSS Pyramid of Greatness'. The triangle contains 55 rectangles with information and key features of CSS. From 'Animations: moving things around and keeping you warm in winter' to 'Tailwind: Avoid it'. Check the live demo for more information and all 55 of them.">
+        <img src="/comics/200/200-pyramid-of-greatness-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/198" rel="prev">
+        <a href="/comics/199" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/81">
+        <a class="random-post" href="/comics/180">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/200" rel="next">
+        <a href="/comics/201" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/199">https://comicss.art/comics/199</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/199/tanning.png">https://comicss.art/comics/199/tanning.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/199/tanning.html" rel="alternate">https://comicss.art/comics/199/tanning.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/200">https://comicss.art/comics/200</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/200/pyramid-of-greatness.png">https://comicss.art/comics/200/pyramid-of-greatness.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/200/pyramid-of-greatness.html" rel="alternate">https://comicss.art/comics/200/pyramid-of-greatness.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 199;</script>
+    <script>let postId = 200;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
