--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Tanning</h1>
+      <h1>CSS Pyramid of Greatness</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/198" rel="prev">
+        <a href="/comics/199" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/128">
+        <a class="random-post" href="/comics/190">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels showing three people talking. Person 1: We have a coupon for the tanning salon. Want to come with us? Person 2: I want a tan too, but I can't go coz of my sinus infection. Maybe tomorrow? Person 1: It expires today. That salon is pricey, I couldn’t afford such a cost without a coupon. It’d be a sin not to use it. Would a tangerine help? Person 2: W... What...? Hmmm... Hypothesis: the cartoonist is randomly inserting trigonometric functions into the comic. Person 3: EIGHT!">
-        <img src="/comics/199/199-tanning-0.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-1.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-2.webp" alt="" width="350" />
-        <img src="/comics/199/199-tanning-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon showing a triangle titled 'CSS Pyramid of Greatness'. The triangle contains 55 rectangles with information and key features of CSS. From 'Animations: moving things around and keeping you warm in winter' to 'Tailwind: Avoid it'. Check the live demo for more information and all 55 of them.">
+        <img src="/comics/200/200-pyramid-of-greatness-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/198" rel="prev">
+        <a href="/comics/199" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/81">
+        <a class="random-post" href="/comics/180">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/199">https://comicss.art/comics/199</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/199/tanning.png">https://comicss.art/comics/199/tanning.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/199/tanning.html" rel="alternate">https://comicss.art/comics/199/tanning.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/200">https://comicss.art/comics/200</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/200/pyramid-of-greatness.png">https://comicss.art/comics/200/pyramid-of-greatness.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/200/pyramid-of-greatness.html" rel="alternate">https://comicss.art/comics/200/pyramid-of-greatness.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-07-27"></script>
+    <script src="/js/data.js?last-updated=2025-08-03"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
