--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>CSS Pyramid of Greatness</h1>
+      <h1>The Old Way</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/199" rel="prev">
+        <a href="/comics/200" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/190">
+        <a class="random-post" href="/comics/174">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,8 +140,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon showing a triangle titled 'CSS Pyramid of Greatness'. The triangle contains 55 rectangles with information and key features of CSS. From 'Animations: moving things around and keeping you warm in winter' to 'Tailwind: Avoid it'. Check the live demo for more information and all 55 of them.">
-        <img src="/comics/200/200-pyramid-of-greatness-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid. In the first panel, a character asks 'Hey, dude! What are you up to?' a second character replies 'Just building a website... the old way: no frameworks, no webpack, no AI, no libraries... Just crafting HTML, JS, and CSS. It is so much fun!' to the shock of the first character who backs away slowly, to go and tell a different person 'I tell you! He has lost his ******* mind!' in the last panel">
+        <img src="/comics/201/201-the-old-way-0.webp" alt="" width="350" />
+        <img src="/comics/201/201-the-old-way-1.webp" alt="" width="350" />
+        <img src="/comics/201/201-the-old-way-2.webp" alt="" width="350" />
+        <img src="/comics/201/201-the-old-way-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +154,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/199" rel="prev">
+        <a href="/comics/200" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/180">
+        <a class="random-post" href="/comics/99">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -179,9 +182,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/200">https://comicss.art/comics/200</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/200/pyramid-of-greatness.png">https://comicss.art/comics/200/pyramid-of-greatness.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/200/pyramid-of-greatness.html" rel="alternate">https://comicss.art/comics/200/pyramid-of-greatness.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/201">https://comicss.art/comics/201</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/201/the-old-way.png">https://comicss.art/comics/201/the-old-way.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/201/the-old-way.html" rel="alternate">https://comicss.art/comics/201/the-old-way.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +223,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-08-03"></script>
+    <script src="/js/data.js?last-updated=2025-08-10"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
